--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongodb": "^4.7.0"
